# constrained_manipulability

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  constrained_manipulability.kdev4  package.xml
.github/workflows/: ci.yml  paper.yml
.kdev4/: constrained_manipulability.kdev4
config/: ur_config_servo.yaml
constrained_manipulability/: CMakeLists.txt  package.xml
constrained_manipulability/config/: example_scene1.yaml  example_scene2.yaml  example_scene3.yaml  example_scene4.yaml  example_scene_flat.yaml  example_scene_fraka.yaml  example_scene_gen3.yaml  example_scene_ur3.yaml
constrained_manipulability/examples/: abstract_scene_example.cpp  slicing_polytope_example.cpp
constrained_manipulability/include/constrained_manipulability/: constrained_manipulability.hpp  constrained_manipulability_utils.hpp  polytope.hpp
constrained_manipulability/launch/: abstract_gen3.launch  abstract_gen3.launch.py  abstract_robot.launch.py  abstract_scene_example.launch.py  abstract_ur3e.launch.py  cm_server_example.launch.py  shrinking_polytope.launch.py  slicing_polytope.launch.py
constrained_manipulability/scripts/: cm_client.py  lin_limit_pub.py
constrained_manipulability/src/: constrained_manipulability.cpp  constrained_manipulability_main.cpp  constrained_manipulability_utils.cpp  polytope.cpp
constrained_manipulability/test/: constrained_manipulability_server.cpp
constrained_manipulability/tests/: polytope_test.cpp  utils_test.cpp
constrained_manipulability_interfaces/: CMakeLists.txt  package.xml
constrained_manipulability_interfaces/msg/: Matrix.msg  ObjectDistances.msg  Polytope.msg  PolytopeHyperplanes.msg  PolytopeMesh.msg  PolytopeVolume.msg
constrained_manipulability_interfaces/rviz/: octomap_robot.rviz
constrained_manipulability_interfaces/srv/: AddRemoveCollisionMesh.srv  AddRemoveCollisionSolid.srv  GetJacobianMatrix.srv  GetPolytopeConstraints.srv  GetPolytopes.srv  GetSlicedPolytope.srv
include/constrained_manipulability/: constrained_manipulability.h  constrained_manipulability.hpp  octomap_filter.hpp  polytope.hpp  utility_funcs.h  utility_funcs.hpp
launch/: abstract_gen3.launch  abstract_robot.launch  abstract_ur3e.launch  cm_octomap_test.launch  cm_server_gen3.launch  cm_server_test.launch  cm_server_test_bak.launch  direct_teleop.launch  filter_octomap_test.launch  franka_test.launch  ik_example.launch  ik_example_gen3.launch  ik_example_ur3.launch  ik_example_ur3e.launch  octomap_test.launch  sawyer_test.launch  shared_control_ur3.launch  shrinking_polytope_test.launch  slicing_polytope_test.launch  ur3_test.launch  ur3e_modified_urdf_test.launch  ur_abstract.launch  ur_test.launch
msg/: ObjectDistances.msg  PolytopeHyperplanes.msg  PolytopeMarker.msg  PolytopeMesh.msg  PolytopeVolume copy.msg  PolytopeVolume.msg  SpaceIndicator.msg
nodes/: abstract_robot_test.cpp  constrained_manipulability_server.cpp  octomap_polytope_test.cpp  shrinking_polytope_test.cpp  slicing_polytope_test.cpp
paper/: paper.bib  paper.md
rviz/: octomap_gen3.rviz  octomap_robot.rviz  view_robot.rviz
scene_config/: clutter.yaml  example_scene1.yaml  example_scene2.yaml  example_scene_flat.yaml  example_scene_flatyaml  example_scene_gen3.yaml  example_scene_ur.yaml  example_scene_ur3.yaml  example_scene_ur_intent.yaml  franka.rviz  obs_config.yaml  obs_config2.yaml  scene0.yaml  scene1.yaml  scene2.yaml  scene_ik.yaml  scene_mpc.yaml  scene_mpc2.yaml  scene_t1.yaml  scene_t2.yaml  scene_t3.yaml  scene_t4.yaml  scene_t5.yaml  scene_t6.yaml
scripts/: cm_client.py  gen3_client.py  lin_limit_pub.py
src/: .constrained_manipulability.cpp.kate-swp  constrained_manipulability.cpp  octomap_filter.cpp  polytope.cpp  static_constrained_manipulability.cpp
srv/: GetJacobianMatrix.srv  GetPolytopeConstraints.srv
test/: .abstract_robot_test_node.cpp.kate-swp  abstract_robot_test_node.cpp  constrained_manipulability_server.cpp  direct_teleop.cpp  filter_octomap_polytope.cpp  ik_example.cpp  octomap_polytope.cpp  shrinking_polytope.cpp  slicing_polytope.cpp
urdf/: screwdriver_tool.xacro  ur3e_with_screwdriver_tool.xacro
