<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>constrained_manipulability</name>
  <version>0.0.0</version>
  <description>The constrained manipulability package.</description>
  <maintainer email="m.zolotas@northeastern.edu">markz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>geometry_msgs</depend>
  <depend>geometric_shapes</depend>
  <depend>octomap_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>

  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_eigen_kdl</depend>
  <depend>tf2_ros</depend>

  <depend>eigen</depend>
  <depend>kdl_parser</depend>
  <depend>pcl_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <depend>constrained_manipulability_interfaces</depend>
  <depend>octomap_filter_interfaces</depend>
  <depend>robot_collision_checking</depend>
  
  <exec_depend>ur_description</exec_depend>
  <exec_depend>kortex_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>